Added name and date sorting of images.

--- a/changes.txt
+++ b/changes.txt
@@ -91,3 +91,8 @@ programa y su versión numérica. El segundo número es la versión del
 formato de datos.
 
 
+Fri Jan 26 17:11:33 CST 2018
+
+Ordena por fecha y por nombre de archivo.
+
+
